feat: add explicit constants and parity constraints for red-black algebra
- Added explicit RED_ONE (-1) and BLACK_ONE (1) constants with clear semantic meaning
  - RED_ONE: Identity for even values, annihilator for odd values
  - BLACK_ONE: Identity for odd values, annihilator for even values
  - Added helper functions like red_one_for_dtype() and is_red_one()

- Implemented asymmetric identity behavior in AVOS product
  - LEFT identity: Acts as starting point marker without filtering
  - RIGHT

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -231,6 +231,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Parity Identity Constraints\n",
+    "\n",
+    "The AVOS product has a subtle but important property regarding the special values RED_ONE (-1) and BLACK_ONE (1). These values serve as **parity-based identities** with **asymmetric behavior** depending on their position in the product.\n",
+    "\n",
+    "#### Identity Semantics (Asymmetric)\n",
+    "\n",
+    "**When an identity appears on the LEFT** (starting point):\n",
+    "- The identity acts as a \"starting point marker\" with no parity filtering\n",
+    "- `RED_ONE ⊗ value` = \"male-me's ancestor\" = normal bit-shift operation\n",
+    "- `BLACK_ONE ⊗ value` = \"female-me's ancestor\" = normal bit-shift operation\n",
+    "\n",
+    "**When an identity appears on the RIGHT** (gender filter):\n",
+    "- The identity acts as a **gender/parity filter**\n",
+    "- `value ⊗ RED_ONE` = \"value's male self\"\n",
+    "  - Returns `value` if value is even (males have male self)\n",
+    "  - Returns `0` if value is odd (females have no male self)\n",
+    "- `value ⊗ BLACK_ONE` = \"value's female self\"  \n",
+    "  - Returns `value` if value is odd (females have female self)\n",
+    "  - Returns `0` if value is even (males have no female self)\n",
+    "\n",
+    "#### Examples\n",
+    "\n",
+    "Consider vertex 3 (mother) and vertex 2 (father):\n",
+    "\n",
+    "```\n",
+    "RED_ONE ⊗ 3 = 3     # \"male-me's mother is mother\"\n",
+    "3 ⊗ RED_ONE = 0     # \"mother's male self is undefined\"\n",
+    "\n",
+    "BLACK_ONE ⊗ 3 = 3   # \"female-me's mother is mother\"  \n",
+    "3 ⊗ BLACK_ONE = 3   # \"mother's female self is mother\"\n",
+    "\n",
+    "RED_ONE ⊗ 2 = 2     # \"male-me's father is father\"\n",
+    "2 ⊗ RED_ONE = 2     # \"father's male self is father\"\n",
+    "\n",
+    "BLACK_ONE ⊗ 2 = 2   # \"female-me's father is father\"\n",
+    "2 ⊗ BLACK_ONE = 0   # \"father's female self is undefined\"\n",
+    "```\n",
+    "\n",
+    "#### Identity ⊗ Identity Special Cases\n",
+    "\n",
+    "When both operands are identities:\n",
+    "\n",
+    "```\n",
+    "RED_ONE ⊗ RED_ONE = RED_ONE       # Male self-loop (same gender)\n",
+    "BLACK_ONE ⊗ BLACK_ONE = BLACK_ONE # Female self-loop (same gender)\n",
+    "RED_ONE ⊗ BLACK_ONE = 0           # Male's female self (undefined)\n",
+    "BLACK_ONE ⊗ RED_ONE = 0           # Female's male self (undefined)\n",
+    "```\n",
+    "\n",
+    "Note: Cross-gender identity products return 0, consistent with parity constraints.\n",
+    "\n",
+    "#### Mathematical Justification\n",
+    "\n",
+    "This asymmetry is **not commutative** by design, reflecting the different roles identities play:\n",
+    "\n",
+    "1. **Left identity**: \"Which gender am I starting from?\" (no filtering)\n",
+    "2. **Right identity**: \"Does this ancestor have the specified gender?\" (parity filter)\n",
+    "\n",
+    "In genealogical terms, when composing relationships:\n",
+    "- Starting gender affects which path you take\n",
+    "- Ending gender determines if the relationship is valid (exists) or undefined (doesn't exist)\n",
+    "\n",
+    "This prevents impossible relationships like \"father's female self\" while allowing valid compositions through the ancestry tree regardless of starting gender."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Transitive Closure for Red-Black Adjacency Matrix\n",
     "\n",
     "Transitive closure of an adjacency matrix can be computed a number of ways, a simple approach is the [Floyd-Warshall Algorithm](https://en.wikipedia.org/wiki/Floyd%E2%80%93Warshall_algorithm).\n",
@@ -286,11 +355,13 @@
    "outputs": [],
    "source": [
     "from redblackgraph.reference import transitive_closure\n",
-    "R = [[-1,  2,  3,  0,  0],\n",
-    "     [ 0, -1,  0,  2,  0],\n",
-    "     [ 0,  0,  1,  0,  0],\n",
-    "     [ 0,  0,  0, -1,  0],\n",
-    "     [ 2,  0,  0,  0,  1]]\n",
+    "from redblackgraph import RED_ONE, BLACK_ONE\n",
+    "\n",
+    "R = [[RED_ONE,  2,  3,  0,  0],\n",
+    "     [ 0, RED_ONE,  0,  2,  0],\n",
+    "     [ 0,  0,  BLACK_ONE,  0,  0],\n",
+    "     [ 0,  0,  0, RED_ONE,  0],\n",
+    "     [ 2,  0,  0,  0,  BLACK_ONE]]\n",
     "transitive_closure(R).W"
    ]
   },
@@ -690,13 +761,15 @@
    "outputs": [],
    "source": [
     "from redblackgraph.reference.components import find_components\n",
-    "R = [[-1, 0, 0, 2, 0, 3, 0],\n",
-    "     [ 0,-1, 0, 0, 0, 0, 0],\n",
-    "     [ 2, 0, 1, 0, 0, 0, 0],\n",
-    "     [ 0, 0, 0,-1, 0, 0, 0],\n",
-    "     [ 0, 2, 0, 0,-1, 0, 3],\n",
-    "     [ 0, 0, 0, 0, 0, 1, 0],\n",
-    "     [ 0, 0, 0, 0, 0, 0, 1]]\n",
+    "from redblackgraph import RED_ONE, BLACK_ONE\n",
+    "\n",
+    "R = [[RED_ONE, 0, 0, 2, 0, 3, 0],\n",
+    "     [ 0, RED_ONE, 0, 0, 0, 0, 0],\n",
+    "     [ 2, 0, BLACK_ONE, 0, 0, 0, 0],\n",
+    "     [ 0, 0, 0, RED_ONE, 0, 0, 0],\n",
+    "     [ 0, 2, 0, 0, RED_ONE, 0, 3],\n",
+    "     [ 0, 0, 0, 0, 0, BLACK_ONE, 0],\n",
+    "     [ 0, 0, 0, 0, 0, 0, BLACK_ONE]]\n",
     "find_components(R)"
    ]
   },
