--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -164,15 +164,12 @@
     "\n",
     "While perhaps not obvious, upon examination of the binary representation, the avos product simply replaces the most significant bit of $r(\\mathbf{v},\\mathbf{w})$ with the value of $r(\\mathbf{u},\\mathbf{v})$. \n",
     "\n",
-    "To complete the definiton of the Avos Product, the following conventions are required:\n",
-    "1. $-1 = -1 \\star 1$\n",
-    "2. $-1 = 1 \\star -1$\n",
-    "3. For all other cases, $-1$ is treated as $1$\n",
+    "**Implementation note:** The special values RED_ONE ($-1$) and BLACK_ONE ($1$) represent vertex self-loops and have parity-dependent behavior. See the \"Parity Identity Constraints\" section below for details.\n",
     "\n",
     "### Avos Sum\n",
     "It is natural to pair multiplication with addition for linear algebra operations (matrix multiplication, matrix distance product, etc.) a min-avos product pairing conforms to the definition of Red Black Graphs with a slight modification required for implementation in a typical RAM computer, namely $-1=2^\\mathbf{w}-1$, where $\\mathbf{w}$ is the word size of the numeric type. As, aside from $-1$, the range of $r(\\mathbf{u},\\mathbf{v})$ is $\\mathbb{N}$, it is natural to utilize unsigned numeric types (in a strongly typed language). Additionally, I use the convention $min(0)=\\infty$. The min function needs to be aware of both these conventions. These conventions define *avos sum* which is designated by $\\dagger$, e.g. $-1 = -1 \\dagger 5$ and $2 = 37 \\dagger 2$ and $3 = 0 \\dagger 3$.\n",
     "\n",
-    "### Reference Implementation of Avos Arithmetic\n"
+    "### Reference Implementation of Avos Arithmetic"
    ]
   },
   {
@@ -225,6 +222,168 @@
     "\n",
     "    bit_position = MSB(y)\n",
     "    return ((y & (2 ** bit_position - 1)) | (x << bit_position))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parity Identity Constraints\n",
+    "\n",
+    "The AVOS product has a subtle but important property regarding the special values RED_ONE (-1) and BLACK_ONE (1). These values serve as **parity-based identities** with **asymmetric behavior** depending on their position in the product.\n",
+    "\n",
+    "#### Identity Semantics (Asymmetric)\n",
+    "\n",
+    "**When an identity appears on the LEFT** (starting point):\n",
+    "- The identity acts as a \"starting point marker\" with no parity filtering\n",
+    "- `RED_ONE ⊗ value` = \"male-me's ancestor\" = normal bit-shift operation\n",
+    "- `BLACK_ONE ⊗ value` = \"female-me's ancestor\" = normal bit-shift operation\n",
+    "\n",
+    "**When an identity appears on the RIGHT** (gender filter):\n",
+    "- The identity acts as a **gender/parity filter**\n",
+    "- `value ⊗ RED_ONE` = \"value's male self\"\n",
+    "  - Returns `value` if value is even (males have male self)\n",
+    "  - Returns `0` if value is odd (females have no male self)\n",
+    "- `value ⊗ BLACK_ONE` = \"value's female self\"  \n",
+    "  - Returns `value` if value is odd (females have female self)\n",
+    "  - Returns `0` if value is even (males have no female self)\n",
+    "\n",
+    "#### Examples\n",
+    "\n",
+    "Consider vertex 3 (mother) and vertex 2 (father):\n",
+    "\n",
+    "```\n",
+    "RED_ONE ⊗ 3 = 3     # \"male-me's mother is mother\"\n",
+    "3 ⊗ RED_ONE = 0     # \"mother's male self is undefined\"\n",
+    "\n",
+    "BLACK_ONE ⊗ 3 = 3   # \"female-me's mother is mother\"  \n",
+    "3 ⊗ BLACK_ONE = 3   # \"mother's female self is mother\"\n",
+    "\n",
+    "RED_ONE ⊗ 2 = 2     # \"male-me's father is father\"\n",
+    "2 ⊗ RED_ONE = 2     # \"father's male self is father\"\n",
+    "\n",
+    "BLACK_ONE ⊗ 2 = 2   # \"female-me's father is father\"\n",
+    "2 ⊗ BLACK_ONE = 0   # \"father's female self is undefined\"\n",
+    "```\n",
+    "\n",
+    "#### Identity ⊗ Identity Special Cases\n",
+    "\n",
+    "When both operands are identities:\n",
+    "\n",
+    "```\n",
+    "RED_ONE ⊗ RED_ONE = RED_ONE       # Male self-loop (same gender)\n",
+    "BLACK_ONE ⊗ BLACK_ONE = BLACK_ONE # Female self-loop (same gender)\n",
+    "RED_ONE ⊗ BLACK_ONE = 0           # Male's female self (undefined)\n",
+    "BLACK_ONE ⊗ RED_ONE = 0           # Female's male self (undefined)\n",
+    "```\n",
+    "\n",
+    "Note: Cross-gender identity products return 0, consistent with parity constraints.\n",
+    "\n",
+    "#### Mathematical Justification\n",
+    "\n",
+    "This asymmetry is **not commutative** by design, reflecting the different roles identities play:\n",
+    "\n",
+    "1. **Left identity**: \"Which gender am I starting from?\" (no filtering)\n",
+    "2. **Right identity**: \"Does this ancestor have the specified gender?\" (parity filter)\n",
+    "\n",
+    "In genealogical terms, when composing relationships:\n",
+    "- Starting gender affects which path you take\n",
+    "- Ending gender determines if the relationship is valid (exists) or undefined (doesn't exist)\n",
+    "\n",
+    "This prevents impossible relationships like \"father's female self\" while allowing valid compositions through the ancestry tree regardless of starting gender."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mathematical Foundations: Algebraic Structure\n",
+    "\n",
+    "### Is This a Semiring?\n",
+    "\n",
+    "The red-black algebra $(S, \\oplus, \\otimes)$ with parity-dependent identities is **NOT a classical semiring**. While it satisfies some semiring properties, it violates key axioms:\n",
+    "\n",
+    "#### What Works ✓\n",
+    "1. **$(S, \\oplus)$ forms a commutative monoid**\n",
+    "   - Commutative: $x \\oplus y = y \\oplus x$\n",
+    "   - Associative: $(x \\oplus y) \\oplus z = x \\oplus (y \\oplus z)$\n",
+    "   - Identity: $0$ (where $0 \\oplus x = x \\oplus 0 = x$)\n",
+    "\n",
+    "2. **Distributivity holds**\n",
+    "   - $x \\otimes (y \\oplus z) = (x \\otimes y) \\oplus (x \\otimes z)$\n",
+    "\n",
+    "3. **Zero is annihilator**\n",
+    "   - $0 \\otimes x = x \\otimes 0 = 0$\n",
+    "\n",
+    "#### What Fails ✗\n",
+    "\n",
+    "1. **Associativity of $\\otimes$ is violated** when identities appear in middle positions:\n",
+    "   ```\n",
+    "   (2 ⊗ BLACK_ONE) ⊗ 3 = 0 ⊗ 3 = 0\n",
+    "   2 ⊗ (BLACK_ONE ⊗ 3) = 2 ⊗ 3 = 5\n",
+    "   ```\n",
+    "   This happens because identity behavior is position-dependent (LEFT = starting point, RIGHT = filter).\n",
+    "\n",
+    "2. **No single two-sided multiplicative identity**\n",
+    "   - RED_ONE is a left-identity for all values, but right-identity only for even values\n",
+    "   - BLACK_ONE is a left-identity for all values, but right-identity only for odd values\n",
+    "\n",
+    "### What Structure IS This?\n",
+    "\n",
+    "The red-black algebra is best understood as a **two-sorted algebra** or **ℤ/2ℤ-graded algebraic structure**:\n",
+    "\n",
+    "**Two-Sorted Interpretation:**\n",
+    "```\n",
+    "S_even = {0, 2, 4, 6, ...} ∪ {RED_ONE}     (grade 0)\n",
+    "S_odd  = {0, 3, 5, 7, ...} ∪ {BLACK_ONE}   (grade 1)\n",
+    "```\n",
+    "\n",
+    "Operations:\n",
+    "- $\\otimes : S_{even} \\times S \\rightarrow S$ (RED_ONE acts as identity)\n",
+    "- $\\otimes : S_{odd} \\times S \\rightarrow S$ (BLACK_ONE acts as identity)\n",
+    "- $\\otimes : S \\times S_{even} \\rightarrow S_{even} \\cup \\{0\\}$ (parity filter for even)\n",
+    "- $\\otimes : S \\times S_{odd} \\rightarrow S_{odd} \\cup \\{0\\}$ (parity filter for odd)\n",
+    "\n",
+    "**Category-Theoretic Interpretation:**\n",
+    "\n",
+    "The structure can also be viewed as a **category** where:\n",
+    "- **Objects**: $\\{\\text{even}, \\text{odd}\\}$ (vertex parity classes)\n",
+    "- **Morphisms**: Relationship values $r(\\mathbf{u}, \\mathbf{v})$\n",
+    "- **Composition**: AVOS product $\\otimes$ (with grade-awareness)\n",
+    "- **Identity morphisms**: RED_ONE for even, BLACK_ONE for odd\n",
+    "\n",
+    "This explains why composition depends on the parity of vertices being composed.\n",
+    "\n",
+    "### Why It Works for Genealogy\n",
+    "\n",
+    "Despite violating classical semiring axioms, the algebra **correctly models genealogical relationships** because:\n",
+    "\n",
+    "1. **Domain constraints prevent problematic compositions**\n",
+    "   - In well-formed genealogical graphs, identity values only appear on diagonal (self-loops)\n",
+    "   - Filtered products (resulting in 0) represent \"undefined relationships\" and don't compose further\n",
+    "   - Path composition never encounters the associativity-breaking cases in practice\n",
+    "\n",
+    "2. **Matrix operations maintain invariants**\n",
+    "   - Floyd-Warshall algorithm converges correctly because:\n",
+    "     - We compute shortest paths (avos_sum selects minimum)\n",
+    "     - Identity×identity only occurs on diagonal\n",
+    "     - Cross-gender filtering naturally represents impossible relationships\n",
+    "\n",
+    "3. **Type safety through graph structure**\n",
+    "   - The graph topology implicitly enforces parity tracking\n",
+    "   - Vertices carry their parity as an intrinsic property\n",
+    "   - Edges respect parity constraints\n",
+    "\n",
+    "### Formal Guarantees\n",
+    "\n",
+    "Within the **genealogical domain** (well-formed red-black graphs), the following properties hold:\n",
+    "\n",
+    "1. **Transitive closure convergence**: $\\exists m \\leq |V|: \\prod_{i=1}^{m} R = R^+$\n",
+    "2. **Path composition soundness**: For valid graph paths, composition via $\\otimes$ yields correct relationship values\n",
+    "3. **Parity preservation**: Operations maintain even/odd classification of vertices\n",
+    "4. **Loop prevention**: Cross-gender filtering prevents impossible ancestry cycles\n",
+    "\n",
+    "**Conclusion:** The red-black algebra is a **domain-specific algebraic structure** that trades classical semiring properties for genealogically-meaningful semantics. It is best formalized as a two-sorted or graded algebra rather than a classical semiring."
    ]
   },
   {
@@ -286,11 +445,13 @@
    "outputs": [],
    "source": [
     "from redblackgraph.reference import transitive_closure\n",
-    "R = [[-1,  2,  3,  0,  0],\n",
-    "     [ 0, -1,  0,  2,  0],\n",
-    "     [ 0,  0,  1,  0,  0],\n",
-    "     [ 0,  0,  0, -1,  0],\n",
-    "     [ 2,  0,  0,  0,  1]]\n",
+    "from redblackgraph import RED_ONE, BLACK_ONE\n",
+    "\n",
+    "R = [[RED_ONE,  2,  3,  0,  0],\n",
+    "     [ 0, RED_ONE,  0,  2,  0],\n",
+    "     [ 0,  0,  BLACK_ONE,  0,  0],\n",
+    "     [ 0,  0,  0, RED_ONE,  0],\n",
+    "     [ 2,  0,  0,  0,  BLACK_ONE]]\n",
     "transitive_closure(R).W"
    ]
   },
@@ -690,13 +851,15 @@
    "outputs": [],
    "source": [
     "from redblackgraph.reference.components import find_components\n",
-    "R = [[-1, 0, 0, 2, 0, 3, 0],\n",
-    "     [ 0,-1, 0, 0, 0, 0, 0],\n",
-    "     [ 2, 0, 1, 0, 0, 0, 0],\n",
-    "     [ 0, 0, 0,-1, 0, 0, 0],\n",
-    "     [ 0, 2, 0, 0,-1, 0, 3],\n",
-    "     [ 0, 0, 0, 0, 0, 1, 0],\n",
-    "     [ 0, 0, 0, 0, 0, 0, 1]]\n",
+    "from redblackgraph import RED_ONE, BLACK_ONE\n",
+    "\n",
+    "R = [[RED_ONE, 0, 0, 2, 0, 3, 0],\n",
+    "     [ 0, RED_ONE, 0, 0, 0, 0, 0],\n",
+    "     [ 2, 0, BLACK_ONE, 0, 0, 0, 0],\n",
+    "     [ 0, 0, 0, RED_ONE, 0, 0, 0],\n",
+    "     [ 0, 2, 0, 0, RED_ONE, 0, 3],\n",
+    "     [ 0, 0, 0, 0, 0, BLACK_ONE, 0],\n",
+    "     [ 0, 0, 0, 0, 0, 0, BLACK_ONE]]\n",
     "find_components(R)"
    ]
   },
