--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load ../redblackgraph/reference/avos.py\n",
+    "# %load ../redblackgraph/reference/rbg_math.py\n",
     "from redblackgraph.reference.util import MSB\n",
     "\n",
     "def avos_sum(x: int, y: int) -> int:\n",
@@ -198,7 +198,12 @@
     "\n",
     "def avos_product(x: int, y: int) -> int:\n",
     "    '''\n",
-    "    The avos product replaces the left most significant bit of operand 2 with operand 1\n",
+    "    The avos product operation in the red-black semiring.\n",
+    "    \n",
+    "    Parity identity constraints:\n",
+    "    - RED_ONE (-1) is identity for even values, annihilator for odd values\n",
+    "    - BLACK_ONE (1) is identity for odd values, annihilator for even values\n",
+    "    \n",
     "    :param x: operand 1\n",
     "    :param y: operand 2\n",
     "    :return: avos product\n",
@@ -207,21 +212,46 @@
     "    # negative values are invalid (aside from -1)\n",
     "    if x < -1 or y < -1:\n",
     "        raise ValueError(f\"Invalid input. Negative values (aside from -1) are not allowed. x: {x}, y:{y}\")\n",
+    "    \n",
     "    # The zero property of the avos product\n",
     "    if x == 0 or y == 0:\n",
     "        return 0\n",
-    "    # Special case -1 * 1 or -1 * -1\n",
+    "    \n",
+    "    # Identity ⊗ Identity special cases (must come before other checks)\n",
+    "    # Same-gender self-loops\n",
+    "    if x == -1 and y == -1:\n",
+    "        return -1  # RED_ONE ⊗ RED_ONE = RED_ONE (male self-loop)\n",
+    "    if x == 1 and y == 1:\n",
+    "        return 1   # BLACK_ONE ⊗ BLACK_ONE = BLACK_ONE (female self-loop)\n",
+    "    \n",
+    "    # Cross-gender identity cases (RED_ONE is even/male, BLACK_ONE is odd/female)\n",
+    "    if x == -1 and y == 1:\n",
+    "        return 0  # RED_ONE ⊗ BLACK_ONE: male's female self is undefined\n",
+    "    if x == 1 and y == -1:\n",
+    "        return 0  # BLACK_ONE ⊗ RED_ONE: female's male self is undefined\n",
+    "    \n",
+    "    # Identity on LEFT (lhs): Just a starting point marker, treat as 1 for bit-shift\n",
     "    if x == -1:\n",
-    "        if y == 1:\n",
-    "            return -1\n",
-    "        x = 1\n",
+    "        x = 1  # Treat RED_ONE as 1 for composition\n",
+    "    \n",
+    "    # Identity on RIGHT (rhs): Acts as gender/parity filter\n",
+    "    # When y is RED_ONE (-1): Filters for even values only\n",
     "    if y == -1:\n",
-    "        if x == 1:\n",
-    "            return -1\n",
-    "        y = 1\n",
+    "        if x & 1:  # x is odd\n",
+    "            return 0  # Odd values have no male self\n",
+    "        else:\n",
+    "            return x  # Even values' male self is themselves\n",
+    "    \n",
+    "    # When y is BLACK_ONE (1): Filters for odd values only\n",
+    "    if y == 1:\n",
+    "        if x & 1:  # x is odd\n",
+    "            return x  # Odd values' female self is themselves\n",
+    "        else:\n",
+    "            return 0  # Even values have no female self\n",
     "\n",
+    "    # Normal case: bit shifting operation\n",
     "    bit_position = MSB(y)\n",
-    "    return ((y & (2 ** bit_position - 1)) | (x << bit_position))\n"
+    "    return ((y & (2 ** bit_position - 1)) | (x << bit_position))"
    ]
   },
   {
@@ -325,8 +355,9 @@
     "   This happens because identity behavior is position-dependent (LEFT = starting point, RIGHT = filter).\n",
     "\n",
     "2. **No single two-sided multiplicative identity**\n",
-    "   - RED_ONE is a left-identity for all values, but right-identity only for even values\n",
-    "   - BLACK_ONE is a left-identity for all values, but right-identity only for odd values\n",
+    "   - RED_ONE is a left-identity for non-identity values, but right-identity only for even values\n",
+    "   - BLACK_ONE is a left-identity for non-identity values, but right-identity only for odd values\n",
+    "   - Cross-gender identity products return 0 (e.g., `RED_ONE ⊗ BLACK_ONE = 0`)\n",
     "\n",
     "### What Structure IS This?\n",
     "\n",
@@ -334,9 +365,14 @@
     "\n",
     "**Two-Sorted Interpretation:**\n",
     "```\n",
-    "S_even = {0, 2, 4, 6, ...} ∪ {RED_ONE}     (grade 0)\n",
-    "S_odd  = {0, 3, 5, 7, ...} ∪ {BLACK_ONE}   (grade 1)\n",
+    "S_even = {RED_ONE=-1, 2, 4, 6, ...}   (grade 0, male/even parity)\n",
+    "S_odd  = {BLACK_ONE=1, 3, 5, 7, ...}  (grade 1, female/odd parity)\n",
+    "S = S_even ∪ S_odd ∪ {0}              (0 is absorbing element)\n",
     "```\n",
+    "\n",
+    "> Note: RED_ONE=-1 is classified as \"even\" because it represents male identity,\n",
+    "> and male ancestors are encoded as even values. Similarly BLACK_ONE=1 is \"odd\"\n",
+    "> for female. The value 0 is the absorbing element (annihilator) shared by both.\n",
     "\n",
     "Operations:\n",
     "- $\\otimes : S_{even} \\times S \\rightarrow S$ (RED_ONE acts as identity)\n",
